# proto/gen/api/v1/chat_settings_service_grpc.pb.go
@@ -1,0 +1,211 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.1
+// - protoc             (unknown)
+// source: api/v1/chat_settings_service.proto
+
+package apiv1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	ChatSettingsService_ListDatasets_FullMethodName       = "/memos.api.v1.ChatSettingsService/ListDatasets"
+	ChatSettingsService_GetChatSettings_FullMethodName    = "/memos.api.v1.ChatSettingsService/GetChatSettings"
+	ChatSettingsService_UpdateChatSettings_FullMethodName = "/memos.api.v1.ChatSettingsService/UpdateChatSettings"
+)
+
+// ChatSettingsServiceClient is the client API for ChatSettingsService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// ChatSettingsService 提供 AI 聊天设置管理功能
+// 用于管理用户的 Dataset 选择和对话选项
+type ChatSettingsServiceClient interface {
+	// ListDatasets 获取用户可用的 Dataset 列表
+	ListDatasets(ctx context.Context, in *ListDatasetsRequest, opts ...grpc.CallOption) (*ListDatasetsResponse, error)
+	// GetChatSettings 获取用户的聊天设置
+	GetChatSettings(ctx context.Context, in *GetChatSettingsRequest, opts ...grpc.CallOption) (*ChatSettings, error)
+	// UpdateChatSettings 更新用户的聊天设置
+	// 会同步更新 RAGFlow Assistant 的 Dataset 配置
+	UpdateChatSettings(ctx context.Context, in *UpdateChatSettingsRequest, opts ...grpc.CallOption) (*ChatSettings, error)
+}
+
+type chatSettingsServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewChatSettingsServiceClient(cc grpc.ClientConnInterface) ChatSettingsServiceClient {
+	return &chatSettingsServiceClient{cc}
+}
+
+func (c *chatSettingsServiceClient) ListDatasets(ctx context.Context, in *ListDatasetsRequest, opts ...grpc.CallOption) (*ListDatasetsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListDatasetsResponse)
+	err := c.cc.Invoke(ctx, ChatSettingsService_ListDatasets_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *chatSettingsServiceClient) GetChatSettings(ctx context.Context, in *GetChatSettingsRequest, opts ...grpc.CallOption) (*ChatSettings, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ChatSettings)
+	err := c.cc.Invoke(ctx, ChatSettingsService_GetChatSettings_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *chatSettingsServiceClient) UpdateChatSettings(ctx context.Context, in *UpdateChatSettingsRequest, opts ...grpc.CallOption) (*ChatSettings, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ChatSettings)
+	err := c.cc.Invoke(ctx, ChatSettingsService_UpdateChatSettings_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// ChatSettingsServiceServer is the server API for ChatSettingsService service.
+// All implementations must embed UnimplementedChatSettingsServiceServer
+// for forward compatibility.
+//
+// ChatSettingsService 提供 AI 聊天设置管理功能
+// 用于管理用户的 Dataset 选择和对话选项
+type ChatSettingsServiceServer interface {
+	// ListDatasets 获取用户可用的 Dataset 列表
+	ListDatasets(context.Context, *ListDatasetsRequest) (*ListDatasetsResponse, error)
+	// GetChatSettings 获取用户的聊天设置
+	GetChatSettings(context.Context, *GetChatSettingsRequest) (*ChatSettings, error)
+	// UpdateChatSettings 更新用户的聊天设置
+	// 会同步更新 RAGFlow Assistant 的 Dataset 配置
+	UpdateChatSettings(context.Context, *UpdateChatSettingsRequest) (*ChatSettings, error)
+	mustEmbedUnimplementedChatSettingsServiceServer()
+}
+
+// UnimplementedChatSettingsServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedChatSettingsServiceServer struct{}
+
+func (UnimplementedChatSettingsServiceServer) ListDatasets(context.Context, *ListDatasetsRequest) (*ListDatasetsResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method ListDatasets not implemented")
+}
+func (UnimplementedChatSettingsServiceServer) GetChatSettings(context.Context, *GetChatSettingsRequest) (*ChatSettings, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetChatSettings not implemented")
+}
+func (UnimplementedChatSettingsServiceServer) UpdateChatSettings(context.Context, *UpdateChatSettingsRequest) (*ChatSettings, error) {
+	return nil, status.Error(codes.Unimplemented, "method UpdateChatSettings not implemented")
+}
+func (UnimplementedChatSettingsServiceServer) mustEmbedUnimplementedChatSettingsServiceServer() {}
+func (UnimplementedChatSettingsServiceServer) testEmbeddedByValue()                             {}
+
+// UnsafeChatSettingsServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to ChatSettingsServiceServer will
+// result in compilation errors.
+type UnsafeChatSettingsServiceServer interface {
+	mustEmbedUnimplementedChatSettingsServiceServer()
+}
+
+func RegisterChatSettingsServiceServer(s grpc.ServiceRegistrar, srv ChatSettingsServiceServer) {
+	// If the following call panics, it indicates UnimplementedChatSettingsServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&ChatSettingsService_ServiceDesc, srv)
+}
+
+func _ChatSettingsService_ListDatasets_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListDatasetsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ChatSettingsServiceServer).ListDatasets(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ChatSettingsService_ListDatasets_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ChatSettingsServiceServer).ListDatasets(ctx, req.(*ListDatasetsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ChatSettingsService_GetChatSettings_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetChatSettingsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ChatSettingsServiceServer).GetChatSettings(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ChatSettingsService_GetChatSettings_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ChatSettingsServiceServer).GetChatSettings(ctx, req.(*GetChatSettingsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ChatSettingsService_UpdateChatSettings_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateChatSettingsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ChatSettingsServiceServer).UpdateChatSettings(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ChatSettingsService_UpdateChatSettings_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ChatSettingsServiceServer).UpdateChatSettings(ctx, req.(*UpdateChatSettingsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// ChatSettingsService_ServiceDesc is the grpc.ServiceDesc for ChatSettingsService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var ChatSettingsService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "memos.api.v1.ChatSettingsService",
+	HandlerType: (*ChatSettingsServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "ListDatasets",
+			Handler:    _ChatSettingsService_ListDatasets_Handler,
+		},
+		{
+			MethodName: "GetChatSettings",
+			Handler:    _ChatSettingsService_GetChatSettings_Handler,
+		},
+		{
+			MethodName: "UpdateChatSettings",
+			Handler:    _ChatSettingsService_UpdateChatSettings_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/v1/chat_settings_service.proto",
+}
